Fix image in alert covering status

--- a/src/Home/Map/styles.scss
+++ b/src/Home/Map/styles.scss
@@ -127,6 +127,12 @@
     font-size: 0.9em;
     text-align: center;
   }
+  img {
+    max-width: 100%;
+    max-height: 200px;
+    width: 100%;
+    object-fit: cover;
+  }
   .alert-record-status {
     position: absolute;
     width: 100%;
